--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ html {
 body {
   background: linear-gradient(90deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
     url("./assets/mobile/bg-image-daytime.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 p {
