--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,28 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap");
 
 html {
   font-family: "Inter", sans-serif;
   font-weight: 400;
+  font-size: 12px;
+  color: white;
 }
 
 body {
-  background: linear-gradient(90deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
-    url("./assets/mobile/bg-image-daytime.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: black;
 }
 
 p {
   all: unset;
-  line-height: 22px;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@media only screen and (min-width: 550px) {
+  html {
+    font-size: 18px;
+  }
 }
