--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,16 @@
 .app {
   padding: 3% 5%;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-size: cover;
+  height: 100vh;
+  transition: height 1s;
+}
+
+.app-collapse {
+  height: 60vh !important;
+  justify-content: flex-end !important;
 }
 
 @media only screen and (min-width: 768px) {
