--- a/src/components/ProgrammingQuotes.module.css
+++ b/src/components/ProgrammingQuotes.module.css
@@ -20,6 +20,10 @@
   cursor: pointer;
 }
 
+main {
+  margin-bottom: 3rem;
+}
+
 @media only screen and (min-width: 768px) {
   .quote {
     line-height: 28px;
